# VTK-realtime-plotter

./: .gitmodules  CMakeLists.txt  README.md  example.cpp  plotter.hpp
